--- a/(PFE)-Nurse-Management/packages.config
+++ b/(PFE)-Nurse-Management/packages.config
@@ -5,6 +5,7 @@
   <package id="Krypton.Components.Suite" version="4.5.9" targetFramework="net472" />
   <package id="Krypton.Toolkit" version="65.22.4.94" targetFramework="net472" />
   <package id="LiveCharts" version="0.9.7" targetFramework="net472" />
+  <package id="MaterialSkin" version="0.2.1" targetFramework="net472" />
   <package id="MaterialSkin.2" version="2.3.1" targetFramework="net472" />
   <package id="MetroFramework" version="1.2.0.3" targetFramework="net472" />
   <package id="MetroFramework.Design" version="1.2.0.3" targetFramework="net472" />
